--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <input type="file" id="image_input" accept="image/png, image/jpg" hidden>
+        <input type="file" id="image_input" accept="image/png, image/jpg, image/jpeg" hidden>
         <label for="image_input">Choose File</label>
         <div id="display_image"></div>
         <div id="output__message">
@@ -36,7 +36,7 @@
             output_mess.classList.add('showResult')
             console.log(this)
         })
-
+        `<li>${benh}</li>`
     </script>
 </body>
 </html>
